@@ -17,6 +17,9 @@ RELEASE X.X.X - XXX
 
     - Add sources for files whose targets don't exist in $CHANGED_SOURCES.
 
+    - Detect implicit dependencies on commands even when the command is
+      quoted.
+
 
 
 RELEASE 1.2.0.d20090113 - Tue, 13 Jan 2009 02:50:30 -0800
